Tried to fix some major bugs, but exhausted quota
I was trying to fix some mistakes with Opus, but it reached quota limit.
So I will upload the fixes it did and the implementation plan for a
future.

--- a/player.html
+++ b/player.html
@@ -52,6 +52,7 @@
     <script src="js/protocol.js"></script>
     <script src="js/dice.js"></script>
     <script src="js/state.js"></script>
+    <script src="js/storage.js"></script>
     <script src="js/connection.js"></script>
     <script src="js/sound.js"></script>
 
